testdata/baselines/reference/submodule/compiler/destructuringAssignmentWithExportedName.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
destructuringAssignmentWithExportedName.ts(8,5): error TS2873: This kind of expression is always falsy.
destructuringAssignmentWithExportedName.ts(11,10): error TS2873: This kind of expression is always falsy.
destructuringAssignmentWithExportedName.ts(14,10): error TS2873: This kind of expression is always falsy.
destructuringAssignmentWithExportedName.ts(17,10): error TS2873: This kind of expression is always falsy.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== destructuringAssignmentWithExportedName.ts (4 errors) ====
    export let exportedFoo: any;
    let nonexportedFoo: any;
    
    // sanity checks
    exportedFoo = null;
    nonexportedFoo = null;
    
    if (null as any) {
        ~~~~~~~~~~~
!!! error TS2873: This kind of expression is always falsy.
        ({ exportedFoo, nonexportedFoo } = null as any);
    }
    else if (null as any) {
             ~~~~~~~~~~~
!!! error TS2873: This kind of expression is always falsy.
    	({ foo: exportedFoo, bar: nonexportedFoo } = null as any);
    }
    else if (null as any) {
             ~~~~~~~~~~~
!!! error TS2873: This kind of expression is always falsy.
    	({ foo: { bar: exportedFoo, baz: nonexportedFoo } } = null as any);
    }
    else if (null as any) {
             ~~~~~~~~~~~
!!! error TS2873: This kind of expression is always falsy.
    	([exportedFoo, nonexportedFoo] = null as any);
    }
    else {
    	([[exportedFoo, nonexportedFoo]] = null as any);
    }
    
    export { nonexportedFoo };
    export { exportedFoo as foo, nonexportedFoo as nfoo };